--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,4 +1,7 @@
 body {
+  min-width: 400px;
+  max-width: auto;
+  height: auto;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
